# audio_analyzer

./: .gitignore  README.md  app.py  flake.nix  ml_test.py  noise_remove.py  pyproject.toml  recognition.py  reverbation.py  visualisation.py  write_sound.py
audio_analyzer/: __main__.py  app.py  navigator.py  visualisation.py  write_sound.py
audio_analyzer/screen/: __init__.py  main_screen.py  screen.py  start_screen.py
audio_analyzer/utils/: __init__.py  audio.py  fonts.py  model.joblib  threading.py
audio_analyzer/widgets/: emotion_recognition.py  filter_menu.py  filter_settings.py  signal_visualisation.py  speech_recognition.py  widget.py
source/: ml test.ipynb
